sfSandBoxCode/force-app/main/default/objects/Employee_Account__c/Employee_Account__c.object-meta.xml
<CustomObject>
    <label>Employee Account</label>
    <nameField>
        <label>Employee Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>