sfSandBoxCode/force-app/main/default/objects/Employee_Account__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>7Geese</fullName>
                <default>true</default>
                <label>7Geese</label>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>BambooHR</fullName>
            </value>
            <value>
                <fullName>Dropbox</fullName>
            </value>
            <value>
                <fullName>Expensify</fullName>
            </value>
            <value>
                <fullName>Google Apps</fullName>
            </value>
            <value>
                <fullName>JobScore</fullName>
            </value>
            <value>
                <fullName>Kopo Kopo</fullName>
            </value>
            <value>
                <fullName>M-PESA</fullName>
            </value>
            <value>
                <fullName>RS and FFA</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>TeamGantt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>