sfSandBoxCode/force-app/main/default/objects/Employee_Account__c/fields/Account_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Created_Date__c</fullName>
    <description>Date Account was Created</description>
    <label>Account Created Date</label>
    <type>Date</type>
</CustomField>