sfSandBoxCode/force-app/main/default/objects/Employee_Account__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Account Active Status</description>
    <inlineHelpText>Account Active Status</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>